--- a/index.html
+++ b/index.html
@@ -381,4 +381,78 @@
 </script>
 
 </body>
-</html>
+</html> <!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Missão Proteção: A Corrida Pela Saúde</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background: #e0f2f1;
+    margin: 0;
+    padding: 20px;
+    color: #004d40;
+  }
+  header {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  h1 {
+    margin-bottom: 5px;
+  }
+  #game {
+    max-width: 600px;
+    margin: 0 auto;
+    background: #ffffffdd;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px #00796b88;
+  }
+  .question {
+    margin-bottom: 15px;
+  }
+  button.answer-btn {
+    background: #00796b;
+    border: none;
+    color: white;
+    padding: 12px 18px;
+    margin: 8px 5px 8px 0;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background 0.3s ease;
+  }
+  button.answer-btn:hover {
+    background: #004d40;
+  }
+  #result, #final-message {
+    text-align: center;
+    font-weight: bold;
+    margin-top: 20px;
+  }
+  .seal-container {
+    margin-top: 20px;
+    text-align: center;
+  }
+  .seal {
+    display: inline-block;
+    margin: 0 8px;
+    padding: 10px 14px;
+    background: #004d40;
+    color: white;
+    font-weight: bold;
+    border-radius: 8px;
+    user-select: none;
+  }
+  #start-btn {
+    background: #00796b;
+    color: white;
+    border: none;
+    padding: 14px 28px;
+    border-radius: 12px;
+    font-size: 20px;
+    cursor: pointer;
+    display: bloc
+
